fix: improve accessibility for social links and profile images

--- a/src/layouts/components/AuthorBox.astro
+++ b/src/layouts/components/AuthorBox.astro
@@ -18,7 +18,7 @@ const { name, bio, avatar, verified = false, socialMedia = {} } = Astro.props;
 
 <div class="author-box">
   <div class="author-header">
-    <Image src={avatar} alt={`Avatar de ${name}`} width={80} height={80} class="author-avatar" />
+    <Image src={avatar} alt={`Foto de perfil`} width={80} height={80} class="author-avatar" />
     <div class="author-info">
       <h3 class="author-name">
         {name}
