--- a/src/layouts/components/ServicesSection.astro
+++ b/src/layouts/components/ServicesSection.astro
@@ -41,6 +41,7 @@ const services: Service[] = [
               width="512"
               height="512"
               alt={service.title}
+              loading="eager"
             />
             <h3 class="text-2xl font-semibold text-gray-800">{service.title}</h3>
           </div>
