optimize featured image

--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -20,6 +20,8 @@ const { className, posts, fluid } = Astro.props;
             alt={post.data.title}
             width={925}
             height={475}
+            loading="eager"
+            fetchpriority="high"
           />
           <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
         </a>
