update fix error

--- a/src/layouts/PostSingle.astro
+++ b/src/layouts/PostSingle.astro
@@ -83,6 +83,8 @@ const {
             width={1000}
             alt={title}
             class="rounded-lg"
+            loading="eager"
+            fetchpriority="high"
           />
         )}
       </div>
