add cookies banner - sitemap

--- a/src/pages/categories/[category].astro
+++ b/src/pages/categories/[category].astro
@@ -26,7 +26,7 @@ const sortedPosts = sortByDate(filterByCategory);
 const title = humanize(category || "");
 ---
 
-<Base title={title || "Category"}>
+<Base title={`${title || "Category"} | El Blog de Andrei`}>
   <div class="section">
     <div class="container">
       <p class="text-center text-2xl mb-4">👇 Encuentra mis mejores posts sobre 👇</p>
