--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -8,6 +8,7 @@ import Header from "@/partials/Header.astro";
 import "@/styles/main.scss";
 import { AstroFont } from "astro-font";
 import { ViewTransitions } from "astro:transitions";
+import CookieBanner from './cookies/CookieBanner.astro';
 
 // font families
 const pf = theme.fonts.font_family.primary;
@@ -41,7 +42,7 @@ const { title, meta_title, description, image, noindex, canonical } =
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- favicon -->
     <link rel="shortcut icon" href={config.site.favicon} />
@@ -62,6 +63,7 @@ const { title, meta_title, description, image, noindex, canonical } =
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <!-- google font css -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <AstroFont
       config={[
         {
@@ -135,6 +137,7 @@ const { title, meta_title, description, image, noindex, canonical } =
       property="og:url"
       content={`${config.site.base_url}/${Astro.url.pathname.replace("/", "")}`}
     />
+    <meta property="og:locale" content="es_ES" />
 
     <!-- twitter-title -->
     <meta
@@ -168,6 +171,23 @@ const { title, meta_title, description, image, noindex, canonical } =
       }`}
     />
     <meta name="twitter:card" content="summary_large_image" />
+
+    <!-- sitemap -->
+    <link rel="sitemap" href="/sitemap-index.xml" />
+
+    <!-- JSON-LD -->
+    <script type="application/ld+json" set:html={JSON.stringify({
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": config.site.title,
+      "url": config.site.base_url,
+      "description": config.metadata.meta_description,
+      "inLanguage": "es",
+      "author": {
+        "@type": "Person",
+        "name": config.metadata.meta_author
+      }
+    })} />
   </head>
   <body>
     <TwSizeIndicator />
@@ -175,6 +195,7 @@ const { title, meta_title, description, image, noindex, canonical } =
     <main id="main-content" class="min-h-[60vh]">
       <slot />
     </main>
+    <CookieBanner />
     <Footer />
   </body>
 </html>
